--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^7.1.1",
     "axios": "^1.8.3",
-    "expo": "~52.0.38",
+    "expo": "~52.0.42",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
   "private": true
